--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 **********************Fast double-difference cross-correlation (FDTCC)******************************************
-*								       Authors:	Min Liu & Miao Zhang           *	   				      *
+*								       Authors:	Min Liu & Miao Zhang           *	   				      
 *										m.liu@dal.ca&miao.zhang@dal.ca *			   
 *										Dalhouise University           *
 *										Nov. 15 2019		       *
