--- a/README
+++ b/README
@@ -4,6 +4,7 @@
 *										Dalhouise University           *
 *										Nov. 15 2019		       *
 ****************************************************************************************************************
+Workflow.pdf
 1.Usage
 	FDTCC -C(ife/ifd/ifp) -W(wb/wa/wf/wbs/was/wfs) -D(delta/threshold/thre_SNR/thre_shift)
 	-G(trx/trh/tdx/tdh) -B(low/high) -F(f)
